# sparkler

./: .gitignore  CMakeLists.txt  README.md
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  README.md
demo/: CMakeLists.txt  print_tree.cpp
grammar/: CMakeLists.txt  SCLexer.g4  SCParser.g4
